--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
   "dependencies": {
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-ls": "^4.2.0",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.0.4",
     "@types/jsdom": "^20.0.1",
     "@types/node": "^18.11.12",
-    "@types/vue-ls": "^3.2.3",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
