[MOD] new settings for routing

--- a/src/configs/websiteData.yml
+++ b/src/configs/websiteData.yml
@@ -1,5 +1,8 @@
 
 
+websiteName: WealthyPath
+websiteDomain: https://www.wealthypath.com
+
 
 # ADSENSE SCRIPT
-adsenseScript: "asdfasdfsadfsfewsafasdfgasdg"
+
