--- a/src/configs/template/uiSettings.yml
+++ b/src/configs/template/uiSettings.yml
@@ -5,8 +5,12 @@
 navBar:
   navBarLinkType: underlined
     # 'underlined' || 'filled'
-  showIcons: false
-    # true || false
+  showIcons: # true || false
+    majorLinks: false
+    subLinks: false
+  subLinkShrinkThreshold: 1350
+    # Category Links Shrinks if the ViewWidth is smaller than this value. (Depends on Category counts)
+
 
 
 shape:
