--- a/src/configs/websiteSettings.yml
+++ b/src/configs/websiteSettings.yml
@@ -7,7 +7,7 @@ websiteDomain: https://www.wealthypath.com
 
 
 
-# PAGES ================================
+# Router Setting ========================
   # Corresponds to Vue Router 4.X
   # These pages mount into <RouterView>
   # inside of @/template/App.vue.
@@ -21,8 +21,7 @@ websiteDomain: https://www.wealthypath.com
   #    - 'user' user login needed
   #    - 'admin' admin auth needed
   #    - 'none' no route allowed
-# =======================================
-pages:
+Pages: #=================================
 
   - name: Home
     uri: '/:pagenum(\\d+)?'
@@ -54,9 +53,59 @@ pages:
 
 
 
+# Navigation Setting ======================
+  # These records will appear in Header Navigation as Links.
+  # The order of links would follow this order.
+  #
+  # @title: The title that would appears in links
+  # @icon: Material Symbol that would appears in links (see https://fonts.google.com/icons)
+  # @uri: The endpoint to route
+  # @nestedRecords: Nested Links. Same as this structure. (Usually follows Categories)
+  # Fully customizalbe for any router endpoints, doesn't have to be correspond to the page list.
+NavRecords: #==============================
 
+  - title: Home
+    icon: home
+    uri: /
+    nestedRecords:
 
+  - title: About
+    icon: mood
+    uri: /about
+    nestedRecords:
 
+  - title: Tags
+    icon: sell
+    uri: /tags
+    nestedRecords:
 
-# ADSENSE SCRIPT
+  - title: Categories
+    icon: format_list_bulleted
+    uri: /categories
+    nestedRecords:
+
+    - title: Budgeting
+      icon: abc
+      uri: /categories/budgeting
+
+    - title: Investing
+      icon: abc
+      uri: /categories/investing
+
+    - title: Retirement
+      icon: abc
+      uri: /categories/retirement
+
+    - title: Real Estate
+      icon: abc
+      uri: /categories/real-estate
+
+    - title: Taxes
+      icon: abc
+      uri: /categories/taxes
+
+    - title: Personal Finance
+      icon: abc
+      uri: /categories/personal-finance
+
 
