--- a/src/configs/websiteSettings.yml
+++ b/src/configs/websiteSettings.yml
@@ -56,32 +56,44 @@ Pages: #=================================
 # Navigation Setting ======================
   # These records will appear in Header Navigation as Links.
   # The order of links would follow this order.
-  #
+
   # @title: The title that would appears in links
   # @icon: Material Symbol that would appears in links (see https://fonts.google.com/icons)
   # @uri: The endpoint to route
+
+  # @sublinks: 
+    # always-show : show nested links always.
+    # always-hide : hide always, action (hover or click) to show nested links.
+    # show-on-wide : show in wide space, hide in small space.
+    # blank if there's no nestedRecords.
+
   # @nestedRecords: Nested Links. Same as this structure. (Usually follows Categories)
+
   # Fully customizalbe for any router endpoints, doesn't have to be correspond to the page list.
 NavRecords: #==============================
 
   - title: Home
     icon: home
     uri: /
+    sublinks: 
     nestedRecords:
 
   - title: About
     icon: mood
     uri: /about
+    sublinks: 
     nestedRecords:
 
   - title: Tags
     icon: sell
     uri: /tags
+    sublinks: 
     nestedRecords:
 
   - title: Categories
     icon: format_list_bulleted
     uri: /categories
+    sublinks: 'show-on-wide'
     nestedRecords:
 
     - title: Budgeting
@@ -107,5 +119,7 @@ NavRecords: #==============================
     - title: Personal Finance
       icon: abc
       uri: /categories/personal-finance
+
+
 
 
