Custom Component Injection for NavBar_HorizonLinks

--- a/src/configs/template/componentSettings.yml
+++ b/src/configs/template/componentSettings.yml
@@ -2,12 +2,18 @@
 
 
 
+# ==================================
 NavBar_HorizonLinks:
+
+  customComponentInjection: CC_Example
+    # This component would be attached to the top of this component.
+
   showIcons: # true || false
     majorLinks: false
     subLinks: false
 
 
+# ==================================
 RouterLink_VstackNest:
   appearance: underlined
     # 'underlined' || 'filled'
