--- a/src/configs/template/templateSettings.yml
+++ b/src/configs/template/templateSettings.yml
@@ -14,4 +14,7 @@ breakpoints:
 # =========================================
 EditorialSettings: # ======================
 
+  CustomComponentInjection:
+    AppTop: 
+
   NavBar: NavBar_HorizonLinks
