--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false"
   },
   "dependencies": {
+    "@vueuse/head": "^1.0.25",
     "cross-env": "^7.0.3",
     "http-status-codes": "^2.2.0",
     "pinia": "^2.0.28",
@@ -27,11 +28,18 @@
     "@vue/test-utils": "^2.2.6",
     "@vue/tsconfig": "^0.1.3",
     "jsdom": "^20.0.3",
+    "markdown-it-anchor": "^8.6.6",
+    "markdown-it-footnote": "^3.0.3",
+    "markdown-it-mark": "^3.0.1",
+    "markdown-it-prism": "^2.3.0",
+    "markdown-it-toc-done-right": "^4.2.0",
     "npm-run-all": "^4.1.5",
+    "prismjs": "^1.29.0",
     "sass": "^1.57.1",
     "typescript": "~4.7.4",
     "vite": "^4.0.0",
     "vite-plugin-sass-glob-import": "^2.0.0",
+    "vite-plugin-vue-markdown": "^0.22.4",
     "vitest": "^0.25.6",
     "vue-tsc": "^1.0.12"
   }
