--- a/package.json
+++ b/package.json
@@ -6,23 +6,21 @@
     "dev-0": "export NODE_ENV=DEV_0 && npm run sass-glob-restore && vite",
     "dev-1": "export NODE_ENV=DEV_1 && npm run sass-glob-restore && vite",
     "dev-2": "export NODE_ENV=DEV_2 && npm run sass-glob-restore && vite",
-    
     "build-and-preview": "npm run build && npm run preview",
-
     "build": "export NODE_ENV=BUILD && npm run sass-glob-builder && vite build",
     "preview": "vite preview",
-
     "build-and-typecheck": "run-p type-check build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "test:unit": "vitest --environment jsdom --root src/",
-
     "sass-glob-builder": "source ./src/template/tools/pyenv_3_11/bin/activate && python ./src/template/tools/sass-glob-builder.py",
     "sass-glob-restore": "source ./src/template/tools/pyenv_3_11/bin/activate && python ./src/template/tools/sass-glob-restore.py"
   },
   "dependencies": {
+    "@js-temporal/polyfill": "^0.4.3",
     "@vueuse/head": "^1.0.25",
     "cross-env": "^7.0.3",
     "http-status-codes": "^2.2.0",
+    "moment": "^2.29.4",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
